--- a/main.css
+++ b/main.css
@@ -871,7 +871,7 @@ figcaption {
 .platform_card {
     grid-column-gap: .625rem;
     grid-row-gap: .625rem;
-    background-image: linear-gradient(180deg,var(--brand--purple-dark)20%,var(--brand--purple-medium));
+    background-color: #131335;
     border-radius: .75rem;
     flex-flow: column;
     width: 100%;
@@ -903,7 +903,6 @@ figcaption {
 }
 
 .light-gradient_card_bg {
-    background-image: linear-gradient(180deg,var(--brand--purple-dark)20%,var(--brand--purple-light));
     opacity: 0;
     pointer-events: none;
     width: 100%;
