--- a/main.css
+++ b/main.css
@@ -302,7 +302,7 @@ figcaption {
     grid-column-gap: .5rem;
     grid-row-gap: .5rem;
     background-color: var(--background--tertiary-light);
-    color: var(--text--secondary);
+    color: #131335;
     text-align: center;
     border-radius: .625rem;
     justify-content: center;
@@ -325,7 +325,7 @@ figcaption {
 }
 
 .button:hover {
-    color: var(--text--tertiary);
+    color: #131335;
     border-radius: .65rem
 }
 
@@ -388,7 +388,7 @@ figcaption {
 }
 
 .button.is-purple {
-    background-color: #714df0;
+    background-color: #131335;
     color: var(--text--paragraph-light)
 }
 
@@ -654,7 +654,7 @@ figcaption {
 }
 
 .button_bg.is-purple {
-    background-color: black !important;
+    background-color: black;
 }
 
 .button_bg.is-secondary {
@@ -1073,7 +1073,7 @@ figcaption {
 }
 
 .border-gradient:where(.w-variant-5c960ebc-ce5c-78f6-8494-45af949aac3b) {
-    color: var(--text--secondary);
+    color: #131335;
     background-image: linear-gradient(#2e257d, #0c082d);
     font-weight: 700
 }
@@ -1525,7 +1525,7 @@ figcaption {
 }
 
 .text-color-secondary {
-    color: var(--text--secondary)
+    color: #131335;
 }
 
 .list {
